# ASL-X-Plane-11-Platform-Deprecated

./: .gitignore  README.md  create_ood_videos.py  create_videos.py  pyproject.toml  requirements.txt  trajectoryrunner.py
notebooks/: Train Autoencoder.ipynb  Train Taxinet.ipynb  analyze_dynamics.ipynb  evaluate_corruption.ipynb  test_logging.ipynb  tune_controller.ipynb
notebooks/data/: dynamics_new2.json  flight_data.json
notebooks/scratch/: test_logging.ipynb  test_screengrabs.ipynb
params/: experiment_params.yaml  pid_params.yaml  settings_conformal.py  simulator_params.yaml  sinusoid_dataset_params.yaml
src/aslxplane/control/: controllers.py  xplanecontroller.py
src/aslxplane/flight_control/: controller.py  dynamics.py  experiment.py  experiment_with_vision.py  lqr.py  takeoff.py  utils.py
src/aslxplane/perception/: estimators.py  fully_observable.py  models.py  monitors.py  tiny_taxinet_pytorch.py
src/aslxplane/simulation/: corruptions.py  data_recorder.py  data_recorder_old.py  taxinet-conformal.py  weather.py  xplane_bridge.py
src/aslxplane/utils/: analysis_utils.py  robust_xpc.py  state.py  video_recording.py  vis_state.py
